--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
 serde = { version = "1.0.159", features = ["derive"] }
 reqwest = "0.11.16"
 shuttle-axum = { version = "0.13.0" }
-#shuttle-secrets = "0.13.0"
+shuttle-secrets = "0.13.0"
 shuttle-service = { version = "0.13.0" }
 shuttle-runtime = { version = "0.13.0" }
 shuttle-shared-db = { version = "0.13.0", features = ["postgres"] }
